# Capstone-2024

./: .gitignore  PID_Controller_CodeGen_March9_2023a.tgz  README.md  test_speed_ctr.slx  untitled.slx
Control_System/: PID_Controller.slx  PID_Controller3.slx  PID_ControllerJan18.slx  PID_ControllerROS.slx  PID_Controller_CodeGen_March9_2023a.slx  PID_Controller_Jan23.slx  PID_Controller_ROS2023a.slx  PID_Controller_updated.slx  pid_controller_codegen.slx
Follow Gap Computation/: FGC_Test_ROS.slx  Follow_Gap_Computation.slx  Follow_Gap_Computation_2023a.slx  Follow_Gap_Compute.slx  fgc.slx  fgc_test_ros.slx
PID_Controller_CodeGen_March9_2023a_ert_rtw/: MW_target_hardware_resources.h  PID_Controller_CodeGen_March9_2023a.h  PID_Controller_CodeGen_March9_2023a_data.cpp  PID_Controller_CodeGen_March9_2023a_private.h  PID_Controller_CodeGen_March9_2023a_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  rosModelInfo.mat  rosnodeinterface.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros_busmsg_conversion.cpp  slros_initialize.cpp
Status_Check/: SC_Test_ROS.slx  Status_Checking.slx  Status_Checking_2023a.slx
src/pid_controller_codegen_march9_2023a/: CMakeLists.txt  package.xml  packageInfo.mat
src/pid_controller_codegen_march9_2023a/include/pid_controller_codegen_march9_2023a/: slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h  zero_crossing_types.h
src/pid_controller_codegen_march9_2023a/src/: PID_Controller_CodeGen_March9_2023a.cpp  main.cpp  rosnodeinterface.cpp
(+85 files in other folders)
